[project]
name = "docling-rag-converter"
version = "0.1.0"
description = "A simple tool to convert PDF, DOCX, XLSX and HTML to clean Markdown for RAG (Retrieval-Augmented Generation) ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cloud Mentor" }
]
dependencies = [
    "docling>=2.0.0",
]
