[project]
name = "docling-rag-converter"
version = "0.1.0"
description = "A simple tool to convert PDF, DOCX, XLSX and HTML to clean Markdown for RAG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0.0",
]

# Ez teszi lehetővé, hogy parancsként futtasd (opcionális, de hasznos)
[project.scripts]
convert = "docling_rag_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Megmondjuk a Hatchling-nek, hogy ez a konkrét fájl a "csomag"
[tool.hatch.build.targets.wheel]
packages = ["docling_rag_converter.py"]
