[project]
name = "docling-rag-converter"
version = "0.1.0"
description = "Egyszerű eszköz PDF, DOCX, XLSX és HTML dokumentumok konvertálásához tiszta Markdown formátumba RAG-hoz."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cloud Mentor" }
]
dependencies = [
    "docling>=2.0.0",
]

# Ez teszi lehetővé, hogy parancsként futtasd (opcionális, de hasznos)
[project.scripts]
convert = "docling_rag_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Megmondjuk a Hatchling-nek, hogy ez a konkrét fájl a "csomag"
[tool.hatch.build.targets.wheel]
packages = ["docling_rag_converter.py"]
